// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`margin renders 0 1`] = `
Array [
  .c0 {
  margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders function 1`] = `
Array [
  .c0 {
  margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin: has;
}

<div
    className="c0"
  />,
  .c0 {
  margin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  margin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders invalid theme path 1`] = `
Array [
  .c0 {
  margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  margin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders negative number 1`] = `
Array [
  .c0 {
  margin: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    margin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    margin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    margin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    margin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    margin: July;
  }
}

@media April {
  .c0 {
    margin: August;
  }
}

@media January {
  .c0 {
    margin: September;
  }
}

@media April {
  .c0 {
    margin: November;
  }
}

@media June {
  .c0 {
    margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    margin: July;
  }
}

@media April {
  .c0 {
    margin: August;
  }
}

@media January {
  .c0 {
    margin: September;
  }
}

@media April {
  .c0 {
    margin: November;
  }
}

@media June {
  .c0 {
    margin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin: January;
  }
}

@media April {
  .c0 {
    margin: December;
  }
}

@media January {
  .c0 {
    margin: April;
  }
}

@media April {
  .c0 {
    margin: May;
  }
}

@media June {
  .c0 {
    margin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    margin: January;
  }
}

@media April {
  .c0 {
    margin: December;
  }
}

@media January {
  .c0 {
    margin: April;
  }
}

@media April {
  .c0 {
    margin: May;
  }
}

@media June {
  .c0 {
    margin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders postitive number 1`] = `
Array [
  .c0 {
  margin: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  margin: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders string 1`] = `
Array [
  .c0 {
  margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin: July;
}

<div
    className="c0"
  />,
  .c0 {
  margin: June;
}

<div
    className="c0"
  />,
  .c0 {
  margin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`margin renders valid theme path 1`] = `
Array [
  .c0 {
  margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  margin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
